CarInsurance app with updated logic, admin page added

--- a/CarInsurance/Views/Insuree/Delete.cshtml
+++ b/CarInsurance/Views/Insuree/Delete.cshtml
@@ -84,11 +84,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ConverageType)
+            @Html.DisplayNameFor(model => model.CoverageType)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ConverageType)
+            @Html.DisplayFor(model => model.CoverageType)
         </dd>
 
         <dt>
