--- a/CarInsurance/Views/Insuree/Create.cshtml
+++ b/CarInsurance/Views/Insuree/Create.cshtml
@@ -90,22 +90,16 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ConverageType, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CoverageType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.ConverageType)
-                    @Html.ValidationMessageFor(model => model.ConverageType, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.CoverageType)
+                    @Html.ValidationMessageFor(model => model.CoverageType, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Quote, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Quote, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Quote, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        <!-- this is where the model.Quote code was removed; should not be editable for the user -->
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
