--- a/CarInsurance/Views/Insuree/Details.cshtml
+++ b/CarInsurance/Views/Insuree/Details.cshtml
@@ -83,11 +83,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ConverageType)
+            @Html.DisplayNameFor(model => model.CoverageType)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ConverageType)
+            @Html.DisplayFor(model => model.CoverageType)
         </dd>
 
         <dt>
