--- a/CarInsurance/Views/Insuree/Index.cshtml
+++ b/CarInsurance/Views/Insuree/Index.cshtml
@@ -39,7 +39,7 @@
             @Html.DisplayNameFor(model => model.SpeedingTickets)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ConverageType)
+            @Html.DisplayNameFor(model => model.CoverageType)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Quote)
@@ -77,7 +77,7 @@
             @Html.DisplayFor(modelItem => item.SpeedingTickets)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ConverageType)
+            @Html.DisplayFor(modelItem => item.CoverageType)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Quote)
